pods.yaml
apiVersion: v1
kind: Pod
metadata:
  name: footnotes-db
  labels:
    app: footnotes-db
  namespace: test1
spec:
  securityContext:
    runAsNonRoot: true
    seccompProfile:
      type: RuntimeDefault
  volumes:
    - name: footnotes-data
      persistentVolumeClaim:
        claimName: footnotes-pvc-1
  containers:
    - name: fn-db
      volumeMounts:
        - name: footnotes-data
          mountPath: /var/lib/mysql
      image: quay.io/zherman/footnotes-db
      ports:
        - containerPort: 3306
      securityContext:
        allowPrivilegeEscalation: false
        capabilities:
          drop:
            - ALL
---
apiVersion: v1
kind: Pod
metadata:
  name: footnotes-api
  labels:
    app: footnotes-api
  namespace: test1
spec:
  serviceAccountName: default
  containers:
    - name: footnotes-api
      image: quay.io/zherman/footnotes-api
      ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Pod
metadata:
  name: footnotes-app
  labels:
    app: footnotes-app
  namespace: test1
spec:
  serviceAccountName: default
  containers:
    - name: footnotes-app
      image: quay.io/zherman/footnotes-app
      ports:
        - containerPort: 3000
