service.yaml
apiVersion: v1
kind: Service
metadata:
  name: footnotes-db-service
spec:
  selector:
    app: footnotes-db
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
---
apiVersion: v1
kind: Service
metadata:
  name: footnotes-api-service
spec:
  selector:
    app: footnotes-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: footnotes-app-service
spec:
  selector:
    app: footnotes-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
