deploy_footnotes.yaml
apiVersion: v1
kind: Pod
metadata:
  name: footnotes-db
  labels:
    app: footnotes-db
  namespace: test1
spec:
  securityContext:
    runAsNonRoot: true
    seccompProfile:
      type: RuntimeDefault
  volumes:
    - name: footnotes-data
      persistentVolumeClaim:
        claimName: footnotes-pvc-1
  containers:
    - name: fn-db
      volumeMounts:
        - name: footnotes-data
          mountPath: /var/lib/mysql
      image: quay.io/<username>/footnotes-db
      ports:
        - containerPort: 3306
      securityContext:
        allowPrivilegeEscalation: false
        capabilities:
          drop:
            - ALL
---
apiVersion: v1
kind: Pod
metadata:
  name: footnotes-api
  labels:
    app: footnotes-api
  namespace: test1
spec:
  serviceAccountName: default
  containers:
    - name: footnotes-api
      image: quay.io/<username>/footnotes-api
      ports:
        - containerPort: 80
---
apiVersion: v1
kind: Pod
metadata:
  name: footnotes-app
  labels:
    app: footnotes-app
  namespace: test1
spec:
  serviceAccountName: default
  containers:
    - name: footnotes-app
      image: quay.io/<username>/footnotes-app
      ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: footnotes-db-service
  namespace: test1
spec:
  selector:
    app: footnotes-db
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
---
apiVersion: v1
kind: Service
metadata:
  name: footnotes-api-service
  namespace: test1
spec:
  selector:
    app: footnotes-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: footnotes-app-service
  namespace: test1
spec:
  selector:
    app: footnotes-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: footnotes-app-route
  namespace: test1
spec:
  to:
    kind: Service
    name: footnotes-app-service
  port:
    targetPort: 3000
